finished fixing anonymous favorites spacing

--- a/productview.less
+++ b/productview.less
@@ -101,14 +101,8 @@ button.slide {
   display: none;
 }
 
-/*
-#products ul.anon-favorites {
-  margin-top: 10px;
-}
-
-*/
 #collection-menu-faves {
-  padding-top: 9px;
+  padding-top: 10px;
 }
 
 .anon-favorites li:hover .item-favorite-remove,
